# mlirExample

./: .gitignore  README.md  build_llvm.sh
Official/: CMakeLists.txt  build_example.sh
Official/transform/: CMakeLists.txt
Official/transform/Ch2/: CMakeLists.txt
Official/transform/Ch3/: CMakeLists.txt
Official/transform/Ch4/: CMakeLists.txt
Unofficial/: CMakeLists.txt  build_example.sh
Unofficial/ex1-io/: CMakeLists.txt
Unofficial/ex2-build/: CMakeLists.txt
Unofficial/ex7-convert/include/toy/: ToyOps.td  ToyPasses.td
Unofficial/ex7-convert/lib/Transforms/: ConvertToyToArith.cpp
Unofficial/ex7-convert/tools/toy-opt/: CMakeLists.txt
